exports[`ChildRecordPanel Snapshots baseline snapshot 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child spf-tree__child--include can-expand">
    <div
      className="panel__body"
      onClick={[Function]}>
      <i
        className="spf-tree__chevron fa fa-chevron-down is-open" />
      <code
        className="spf-tree__code spf-tree__code--include spf-tree__code--label">
        include
        :
        _spf.erlock.homes
      </code>
      <code
        className="spf-tree__code">
        mx
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;

exports[`ChildRecordPanel Snapshots should be hidden if collapsed is true 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child spf-tree__child--include can-expand">
    <div
      className="panel__body"
      onClick={[Function]}>
      <i
        className="spf-tree__chevron fa fa-chevron-down is-open" />
      <code
        className="spf-tree__code spf-tree__code--include spf-tree__code--label">
        include
        :
        _spf.erlock.homes
      </code>
      <code
        className="spf-tree__code">
        mx
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;

exports[`ChildRecordPanel Snapshots should change toggle icon if childrenCollapsed is false 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child spf-tree__child--include can-expand">
    <div
      className="panel__body"
      onClick={[Function]}>
      <i
        className="spf-tree__chevron fa fa-chevron-down" />
      <code
        className="spf-tree__code spf-tree__code--include spf-tree__code--label">
        include
        :
        _spf.erlock.homes
      </code>
      <code
        className="spf-tree__code">
        mx
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;

exports[`ChildRecordPanel Snapshots should not show record if missing 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child spf-tree__child--include can-expand">
    <div
      className="panel__body"
      onClick={[Function]}>
      <i
        className="spf-tree__chevron fa fa-chevron-down is-open" />
      <code
        className="spf-tree__code spf-tree__code--include">
        include
        :
        _spf.erlock.homes
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;
